--- a/styleFeedback.css
+++ b/styleFeedback.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 5;
-    background-image:url(feedback.jpg);
+    background-image:url(pics/feedback.jpg);
     background-size: cover;
     background-position: center; 
     display: flex;
