--- a/styleProfile.css
+++ b/styleProfile.css
@@ -22,9 +22,11 @@ header {
     z-index: 1000;
 }
 
-header h1 {
+ h1 , h2{
     margin: 0;
     font-size: 2.5em;
+    display: flex;
+    justify-content: center;
 }
 
 nav ul {
