--- a/styleIndex.css
+++ b/styleIndex.css
@@ -136,7 +136,7 @@ margin-bottom: 15vw;
 justify-content: center; 
    align-items: center;
     border-radius: 25px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 5px rgb(0, 0, 0);
     padding: 10px 20px;
 }
 .search-bar input,
