--- a/styleLogin.css
+++ b/styleLogin.css
@@ -66,6 +66,10 @@
     color: red !important;
     font-size: 1rem; 
 }
+.passwords{
+    display: flex;
+    justify-content: space-between;
+}
 @media only screen and (max-width: 600px) {
     .registration-submit-button{
         margin: 1vw;
