--- a/styleIndex.css
+++ b/styleIndex.css
@@ -13,9 +13,12 @@ html, body {
     border: 1px groove black;
 
 }
+.navbar-brand{
+    margin: 0;
+}
 #img1{
     height: 3rem;
-    width: 9rem;
+    width: 10rem;
     margin: 0;
     padding-left: 1rem;
 }
