--- a/styleResumeTemplateSelection.css
+++ b/styleResumeTemplateSelection.css
@@ -178,3 +178,74 @@ width: fit-content;
         object-fit: fill;
     }
 }
+
+.footer {
+    background-color: #f8f9fa;
+    border-top: 1px solid #e9ecef;
+}
+#connect-with-us{
+    padding: 0;
+}
+.footer #p1{
+    font-size: 2rem;
+    margin-left: 1rem;
+    padding: 0;
+}
+.footer p {
+    font-size: 1.2rem;
+    color: #6c757d;
+}
+#p2{
+    display: flex;
+    justify-content: start;
+padding-left: 1rem;
+}
+.footer ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer ul li {
+    margin-bottom: 0.5rem;
+}
+
+.footer ul li a {
+    text-decoration: none;
+    color: #007bff;
+    display: flex;
+    justify-content: center;
+    font-size: 1.3rem;
+}
+
+.footer ul li a:hover {
+    text-decoration: underline;
+}
+.social-icons{
+    margin-left: 1rem;
+}
+.footer .social-icons a {
+    color: #6c757d;
+    font-size: 2rem;
+    margin: 0.8rem;
+}
+
+.footer .social-icons a:hover {
+    color: #041527;
+}
+#img2{
+    padding: 2rem;
+}
+
+@media only screen and (max-width: 700px) {
+.footer h2{
+    font-size: 10vw;
+}
+.footer #p1{
+    display: flex;
+    justify-content: center;
+}
+.footer .social-icons{
+    display: flex;
+    justify-content: center;
+}
+}
